
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>dev.cobblesword.nachospigot</groupId>
        <artifactId>parent</artifactId>
        <version>dev-SNAPSHOT</version>
    </parent>

    <artifactId>api</artifactId>
    <version>1.8.8-R0.2-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>NachoSpigot-API</name>
    <description>An enhanced plugin API for Minecraft servers.</description>

    <properties>
        <!--PaperSpigot - Bump to 1.8 - This will haunt me -->
        <additionalparam>-Xdoclint:none</additionalparam>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- just until we get deployment to central approved -->
    <distributionManagement>
        <repository>
            <id>destroystokyo-releases</id>
            <url>https://repo.destroystokyo.com/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>destroystokyo-snapshots</id>
            <url>https://repo.destroystokyo.com/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <!-- required until fixed plexus-compiler-eclipse is deployed -->
    <pluginRepositories>
        <pluginRepository>
            <id>spigotmc-public</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>net.sf.trove4j</groupId>
            <artifactId>trove4j</artifactId>
            <version>3.0.3</version>
            <!-- Trove Provided by CraftBukkit -->
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <!-- bundled with Minecraft, should be kept in sync -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>17.0</version>
            <scope>compile</scope>
        </dependency>
<!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>com.github.ben-manes.caffeine</groupId>-->
<!--            <artifactId>caffeine</artifactId>-->
<!--            <version>2.8.5</version>-->
<!--        </dependency>-->

        <!-- bundled with Minecraft, should be kept in sync -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
          <version>2.2.4</version>
        </dependency>
        <dependency>
            <groupId>org.avaje</groupId>
            <artifactId>ebean</artifactId>
            <version>2.8.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.15</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-chat</artifactId>
            <version>1.8-SNAPSHOT</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <!-- testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>NachoSpigot-API</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <!-- versions after this appear to be broken -->
                <version>3.1</version>
                <configuration>
                    <!-- we use the Eclipse compiler as it doesn't need a JDK -->
                    <compilerId>eclipse</compilerId>
                    <!-- source and target are ignored if this isn't true -->
                    <optimize>true</optimize>
                </configuration>
                <dependencies>
                    <!-- we need our custom version as it fixes some bugs on case sensitive file systems -->
                    <dependency>
                        <groupId>org.codehaus.plexus</groupId>
                        <artifactId>plexus-compiler-eclipse</artifactId>
                        <version>2.5.0-spigotmc</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- utterly useless artifact from shade 2.x -->
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <!-- when downloading via Maven we can pull depends individually -->
                    <shadedArtifactAttached>true</shadedArtifactAttached>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
